# Game-Vault

./: .gitignore  LICENSE.md  README.md  README_Español.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  game_vault.db  tauri.conf.json
src-tauri/src/: main.rs
